fix specs and mobile alignment for self post heart

--- a/app/assets/stylesheets/mobile/topic-post.scss
+++ b/app/assets/stylesheets/mobile/topic-post.scss
@@ -48,7 +48,6 @@ span.badge-posts {
           }
           &.my-likes {
             display: flex;
-            align-items: baseline;
             max-width: unset;
             margin-right: 0;
             padding: 8px 9px 8px 8px;
